# spaced_learning_api

./: .gitignore
cli/: Cargo.toml
cli/src/: main.rs
database/sql/schemas/: 0001_lessons.sql
server/: .air.toml  go.mod  go.sum  main.go  run_update_db_migrations.sh  sqlc.yaml
server/controllers/: auth.go  lessons.go  lib.go  root.go  server_config.go  types.go
server/database/gosql_queries/: lessons.sql.go  models.go  users.sql.go
server/database/sql/queries/: lessons.sql  users.sql
server/database/sql/schemas/: 0001_lessons.sql  0002_users.sql
server/frontend/assets/css/: styles.css
server/frontend/assets/js/: htmx-config.js
server/frontend/views/: auth.templ  auth_templ.go  index.templ  index_templ.go  layout.templ  layout_templ.go
server/helpers/: types.go
server/middlewares/: serve_files.go
